# Mountain

./: .clang-format  .codedocs  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.DotSettings  Doxyfile  LICENSE  Mountain.sln  Mountain.sln.DotSettings  README.md  imgui.ini  vcpkg.json
Examples/: CMakeLists.txt
Examples/src/: Main.cpp  TestGame.cpp  TestGame.hpp
Examples/src/Scenes/: AudioScene.cpp  AudioScene.hpp  ParticleSystemScene.cpp  ParticleSystemScene.hpp  PostProcessingEffectsScene.cpp  PostProcessingEffectsScene.hpp  ShapesScene.cpp  SpriteAnimationsScene.cpp  SpriteAnimationsScene.hpp  TestScene.cpp  TestScene.hpp
Mountain/: CMakeLists.txt  Mountain.natvis  Mountain.vcxproj  Mountain.vcxproj.filters  MountainConfig.cmake.in
Mountain/binary_resources/: generate_resources.cmd
Mountain/include/: core.hpp  entity.hpp  game.hpp  input.hpp  input_constants.hpp  renderer.hpp  screen.hpp  window.hpp
Mountain/include/Mountain/: core.hpp  game.hpp  globals.hpp  screen.hpp  window.hpp
Mountain/include/audio/: audio.hpp  audio_buffer.hpp  audio_context.hpp  audio_device.hpp
Mountain/include/colliders/: circle.hpp  collide.hpp  collider.hpp  collider_list.hpp  grid.hpp  hitbox.hpp
Mountain/include/collision/: circle.hpp  collide.hpp  collider.hpp  collider_list.hpp  grid.hpp  hitbox.hpp
Mountain/include/file/: directory.hpp  entry.hpp  file.hpp  file_manager.hpp
Mountain/include/input/: gamepad_input.hpp  input.hpp  keyboard_input.hpp  mouse_input.hpp  time.hpp
Mountain/include/rendering/: color.hpp  draw.hpp  render_target.hpp  renderer.hpp
Mountain/include/resource/: audio_track.hpp  font.hpp  resource.hpp  resource_manager.hpp  shader.hpp  texture.hpp
Mountain/include/scene/: component.hpp  entity.hpp
Mountain/include/utils/: color.hpp  concepts.hpp  coroutine.hpp  event.hpp  file_system_watcher.hpp  formatter.hpp  guid.hpp  imgui_utils.hpp  list.hpp  logger.hpp  message_box.hpp  meta_programming.hpp  pointer.hpp  random.hpp  rectangle.hpp  reference_counter.hpp  run_length_encoding.hpp  ts_queue.hpp  utils.hpp  windows.hpp
Mountain/inline/collision/: hitbox.inl
Mountain/inline/file/: file_manager.inl
Mountain/inline/rendering/: draw.inl
Mountain/inline/resource/: audio_track.inl  resource_manager.inl
Mountain/inline/utils/: color.inl  event.inl  list.inl  logger.inl  rectangle.inl  ts_queue.inl  utils.inl
Mountain/shaders/: utils.glsl
Mountain/shaders/arc/: arc.frag  arc.vert
Mountain/shaders/circle/: circle.frag  circle.vert
Mountain/shaders/effect/: effect.comp
Mountain/shaders/effects/: film_grain.comp  vignette.comp
Mountain/shaders/line/: line.vert
Mountain/shaders/line_colored/: line_colored.vert
Mountain/shaders/particle/: particle.comp
Mountain/shaders/particles/: base_update.comp  color_over_lifetime.glsl  common.glsl  force_over_lifetime.glsl  module_types.glsl  shape.glsl  update.comp
Mountain/shaders/point/: point.frag  point.vert
Mountain/shaders/post_processing/: post_processing.frag  post_processing.vert
Mountain/shaders/primitive/: primitive.frag  primitive.vert
Mountain/shaders/primitive_colored/: primitive_colored.vert
Mountain/shaders/rectangle/: rectangle.vert
Mountain/shaders/render_target/: render_target.frag  render_target.vert
Mountain/shaders/text/: text.frag  text.vert
Mountain/shaders/texture/: texture.frag  texture.vert
Mountain/shaders/triangle/: triangle.vert
Mountain/shaders/triangle_colored/: triangle_colored.frag  triangle_colored.vert
Mountain/shaders_internal/: easing.glsl  utils.glsl
Mountain/shaders_internal/arc/: arc.frag
Mountain/shaders_internal/circle/: circle.frag  circle.vert
Mountain/shaders_internal/effects/: box_blur_horizontal.comp  box_blur_vertical.comp  chromatic_aberration.comp  chromatic_aberration_axial.comp  chromatic_aberration_transverse.comp  film_grain.comp  gaussian_blur_horizontal.comp  gaussian_blur_horizontal_high.comp  gaussian_blur_horizontal_low.comp  gaussian_blur_vertical.comp  gaussian_blur_vertical_high.comp  gaussian_blur_vertical_low.comp  grayscale.comp  greyscale.comp  mosaic.comp  negative.comp
Mountain/shaders_internal/line/: line.vert
Mountain/shaders_internal/line_colored/: line_colored.vert
Mountain/shaders_internal/particles/: color_by_speed.glsl  color_over_lifetime.glsl  common.glsl  force_over_lifetime.glsl  module_types.glsl  shape.glsl  update.comp  velocity_over_lifetime.glsl
Mountain/shaders_internal/rectangle/: rectangle.vert
Mountain/shaders_internal/render_target/: render_target.frag  render_target.vert
Mountain/shaders_internal/triangle/: triangle.vert
Mountain/shaders_internal/triangle_colored/: triangle_colored.vert
Mountain/src/: game.cpp  input.cpp  random.cpp  run_length_encoding.cpp  screen.cpp  window.cpp
Mountain/src/Mountain/: Core.cpp  (+23 more)
Mountain/tools/: generate_resources.cmd  generate_resources.sh
Profiler/: CMakeLists.txt  Profiler.h  Profiler.vcxproj  Profiler.vcxproj.filters  cpp.hint  dllmain.cpp
Profiler/src/: Profiler.h  Profiler.hpp  TracyClient.cpp
TestProject/: CMakeLists.txt
TestProject/src/: Common.hpp  Main.cpp  TestGame.hpp
Tests/: CMakeLists.txt  Tests.vcxproj  Tests.vcxproj.filters  imgui.ini
Tests/assets/: music.wav.REMOVED.git-id
Tests/include/: Paddle.hpp  animated_character.hpp  camera.hpp  player.hpp  spin_component.hpp  test_entity.hpp  test_game.hpp
Tests/src/: AnimatedCharacter.cpp  AnimatedCharacter.hpp  Camera.cpp  Camera.hpp  Common.hpp  Main.cpp  Paddle.cpp  Player.cpp  Player.hpp  PrecompiledHeader.hpp  SpinComponent.cpp  SpinComponent.hpp  TestEntity.hpp  TestGame.cpp  TestGame.hpp  animated_character.cpp  camera.cpp  main.cpp  player.cpp  spin_component.cpp  test_game.cpp
UnitTests/: CMakeLists.txt  Test.cpp  TestPointer.cpp  UnitTests.vcxproj
UnitTests/src/: Common.hpp  Main.cpp  Test.cpp
src/: CMakeLists.txt
src/Mountain/: Core.hpp  Screen.cpp  Window.cpp  Window.hpp
tests/: AnimatedCharacter.cpp  CMakeLists.txt  Main.cpp  Player.cpp  Player.hpp  SpinComponent.cpp  TestGame.hpp
unit_tests/: CMakeLists.txt  test.cpp
(+3049 files in other folders)
